# Task_Manager

./: .gitigonre  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md
src/: Database.cpp  Database.h  Main.cpp  Main_Window.cpp  Main_Window.h  Task.cpp  Task.h
